# updog

./: .dockerignore  .eslintrc.yml  .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run.sh  tsconfig.json
.github/workflows/: build.yml  publish.yml
api/: Cargo.toml  Dockerfile
api/scripts/: get_existing_keys.lua
api/src/: error.rs  main.rs  middleware.rs  models.rs  routes.rs  session.rs  store.rs
nginx/: nginx.conf
nginx/certs/: updog.wtf.crt
site/: .env.development  .eslintrc.yml  .gitignore  .prettierignore  Dockerfile  package.json  tailwind.config.js  tsconfig.json
site/components/: ClientOutput.tsx  Error.tsx  ErrorSnackbar.tsx  JoinRoom.tsx  MediaControlBar.tsx  Video.tsx
site/components/media/: MicControl.tsx  ScreenControl.tsx  ScreenShareControl.tsx  UserMediaControl.tsx  VideoControl.tsx
site/components/ui/: CardTitle.tsx  CenterCard.tsx  ControlButton.tsx
site/components/ui/forms/: Button.tsx  Input.tsx
site/pages/: [roomId].tsx  _app.tsx  _document.tsx  index.tsx  rooms.tsx
site/src/: animations.ts  constants.ts  fetch.ts  state.ts
site/src/context/: UserMedia.tsx
site/src/hooks/: useMediaSource.ts  usePeers.ts
site/src/state/: UserMedia.ts  UserMediaSource.ts
site/src/state/media/: CameraMediaSource.ts  MicMediaSource.ts  ScreenMediaSource.ts
site/styles/: globals.css
traefik/: config.dev.toml  config.prod.toml
traefik/config/: certificates.toml
