[package]
name = "api"
version = "0.1.0"
authors = ["Will Nelson <will@wnelson.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
async-std = { version = "1.6.0", features = ["attributes"] }
bincode = "1.3.1"
dotenv = "0.15.0"
lazy_static = "1.4.0"
nanoid = "0.3.0"
rand = "0.8.3"
redis = { version = "0.19.0", features = ["connection-manager", "async-std-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tide = "0.16.0"
tide-websockets = "0.2.0"
urlencoding = "1.1.1"
