[package]
name = "updog-api"
version = "0.1.0"
authors = ["Will Nelson <me@wnelson.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
async-session = "3.0.0"
axum = { version = "0.6.16", features = ["ws", "tracing"] }
axum-macros = "0.3.7"
axum-sessions = "0.5.0"
bitcode = "0.2.1"
dotenvy = "0.15.7"
futures = "0.3.28"
lazy_static = "1.4.0"
nanoid = "0.3.0"
orion = { version = "0.17.4", features = ["serde"] }
rand = "0.8.3"
redust = { version = "0.4.0", features = ["pool", "script"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.9"
serde_json = "1.0"
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.4.0", features = [
	"compression-full",
	"cors",
	"trace",
] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
